data/derived/comb/progs/unify/prog1734.ml.out
Characters 156-161:
  (Printf.printf "%s\n" addit;
                        ^^^^^
Error: This expression has type int but an expression was expected of type
         string
